tests/Front/SemanticError/07_MissingVarDeclarationInIf.c
void main() {
    int32_t b;
    b = 2;
    if ( b < 3){
        a = 1;
    }
}